[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/bullet.png" type="Texture" id=1]
[ext_resource path="res://scripts/bullet.gd" type="Script" id=2]
[ext_resource path="res://samples/shot.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1, 3 )

[node name="bullet" type="Area2D"]
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 0, -3 )
texture = ExtResource( 1 )

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3 )
shape = SubResource( 1 )

[node name="sound_fx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -6.118

[node name="destroy_timer" type="Timer" parent="."]
one_shot = true
[connection signal="area_entered" from="." to="." method="_on_bullet_area_entered"]
[connection signal="timeout" from="destroy_timer" to="." method="_on_destroy_timer_timeout"]
